--- a/mingw-w64-crt/lib32/msvcr70d.def.in
+++ b/mingw-w64-crt/lib32/msvcr70d.def.in
@@ -546,7 +546,7 @@ _mktime64
 _msize
 _msize_dbg
 _nextafter
-_onexit
+; _onexit ; disable _onexit for compatibility with DLL builds, real _onexit function provided by mingw-w64
 _open
 _open_osfhandle
 _osplatform DATA
