--- a/mingw-w64-crt/lib64/msvcr120d.def.in
+++ b/mingw-w64-crt/lib64/msvcr120d.def.in
@@ -1409,7 +1409,7 @@ _msize
 _msize_dbg
 _nextafter
 _nextafterf
-_onexit
+; _onexit ; disable _onexit for compatibility with DLL builds, real _onexit function provided by mingw-w64
 _open
 _open_osfhandle
 _pclose
