crt: Provide onexit symbol alias
Now when there is working _onexit() function, provide also onexit() aliased
function, which already has declaration in stdlib.h header file.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/crt-aliases.def.in
+++ b/mingw-w64-crt/def-include/crt-aliases.def.in
@@ -115,7 +115,7 @@ ADD_UNDERSCORE(memccpy)
 ADD_UNDERSCORE(memicmp)
 ADD_UNDERSCORE(mkdir)
 ADD_UNDERSCORE(mktemp)
-; ADD_UNDERSCORE(onexit)
+; onexit function alias is provided by misc/_onexit.c
 ADD_UNDERSCORE(open)
 #ifndef CRTAPP
 ADD_UNDERSCORE(putch)
