--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -353,11 +353,11 @@ src_msvcrt_add_x86=\
 
 # Files included in libucrt*.a
 src_ucrtbase=\
-  misc/ucrt_compat.c \
   misc/ucrt__getmainargs.c \
   misc/ucrt__wgetmainargs.c \
   misc/ucrt_amsg_exit.c \
   misc/ucrt_at_quick_exit.c \
+  misc/ucrt_tzset.c \
   math/_huge.c \
   misc/__badioinfo.c \
   misc/__p___initenv.c \
