--- a/mingw-w64-headers/Makefile.am
+++ b/mingw-w64-headers/Makefile.am
@@ -163,6 +163,7 @@ IDL_SRCS = \
   include/inputscope.idl \
   include/inspectable.idl \
   include/ivectorchangedeventargs.idl \
+  include/iwscapi.idl \
   include/locationapi.idl \
   include/oaidl.idl \
   include/ocidl.idl \
