crt: Add new APIs in wscapi import library
Signed-off-by: Biswapriyo Nath <nathbappai@gmail.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/lib32/Makefile.am
+++ b/mingw-w64-crt/lib32/Makefile.am
@@ -356,6 +356,7 @@ lib32_DATA += %reldir%/libwmilib.a
 lib32_DATA += %reldir%/libwofutil.a
 lib32_DATA += %reldir%/libwow32.a
 #lib32_DATA += %reldir%/libws2_32.a      # Handled by custom rule
+lib32_DATA += %reldir%/libwscapi.a
 lib32_DATA += %reldir%/libwsdapi.a
 lib32_DATA += %reldir%/libwsmsvc.a
 lib32_DATA += %reldir%/libwsnmp32.a
