headers: Update imported headers to Wine version 5b06663a59d5.
Signed-off-by: Jacek Caban <jacek@codeweavers.com>

--- a/mingw-w64-headers/Makefile.am
+++ b/mingw-w64-headers/Makefile.am
@@ -350,6 +350,7 @@ IDL_SRCS = \
   include/windows.ui.composition.idl \
   include/windows.ui.composition.interop.idl \
   include/windows.ui.core.idl \
+  include/windows.ui.notifications.idl \
   include/windows.ui.viewmanagement.idl \
   include/windows.ui.xaml.hosting.desktopwindowxamlsource.idl \
   include/windows.ui.xaml.idl \
