crt: Add winbrand import library
Fixes https://github.com/mingw-w64/mingw-w64/issues/63

Signed-off-by: Biswapriyo Nath <nathbappai@gmail.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-crt/lib64/Makefile.am
+++ b/mingw-w64-crt/lib64/Makefile.am
@@ -671,6 +671,7 @@ lib64_DATA += %reldir%/libwiadss.a
 lib64_DATA += %reldir%/libwiarpc.a
 lib64_DATA += %reldir%/libwiaservc.a
 lib64_DATA += %reldir%/libwiashext.a
+lib64_DATA += %reldir%/libwinbrand.a
 lib64_DATA += %reldir%/libwindows.ai.machinelearning.a
 lib64_DATA += %reldir%/libwindows.data.pdf.a
 lib64_DATA += %reldir%/libwindows.networking.a
