--- a/mingw-w64-crt/lib32/Makefile.am
+++ b/mingw-w64-crt/lib32/Makefile.am
@@ -336,6 +336,7 @@ lib32_DATA += %reldir%/libwiadss.a
 lib32_DATA += %reldir%/libwimgapi.a
 lib32_DATA += %reldir%/libwin32k.a
 lib32_DATA += %reldir%/libwin32spl.a
+lib32_DATA += %reldir%/libwinbrand.a
 lib32_DATA += %reldir%/libwindows.ai.machinelearning.a
 lib32_DATA += %reldir%/libwindows.data.pdf.a
 lib32_DATA += %reldir%/libwindows.networking.a
