crt: Rename purecall.c to _set_purecall_handler.c and fix its inclusion
Source file purecall.c provides emulation of function _set_purecall_handler()
so rename this file to _set_purecall_handler.c. This file does not provide
function named purecall().

Function _set_purecall_handler() is available since msvcr71.dll, so include
source file also into msvcr70.dll import library.

Function _set_purecall_handler() is not available in os system version of
msvcrt.dll therefore it has to be included into msvcrt.dll import library
for all platforms (this was already before this change).

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -296,11 +296,11 @@ src_msvcrt=\
   misc/__sys_errlist.c \
   misc/__sys_nerr.c \
   misc/_configthreadlocale.c \
+  misc/_set_purecall_handler.c \
   misc/imaxdiv.c \
   misc/invalid_parameter_handler.c \
   misc/isblank.c \
   misc/iswblank.c \
-  misc/purecall.c \
   misc/wctrans.c \
   misc/wctype.c \
   secapi/_vscprintf_p.c \
@@ -718,13 +718,15 @@ src_pre_msvcr70=\
   misc/__pctype_func.c \
   misc/__pwctype_func.c \
   misc/lc_locale_func.c \
-  misc/purecall.c \
   misc/strtoimax.c \
   misc/strtoumax.c \
   misc/wcstoimax.c \
   misc/wcstoumax.c \
   stdio/_scprintf.c \
   stdio/_vscprintf.c
+
+src_pre_msvcr71=\
+  misc/_set_purecall_handler.c
 
 src_pre_msvcr80=\
   misc/__sys_errlist.c \
@@ -764,6 +766,7 @@ src_crtdll=\
   $(src_pre_msvcrt40) \
   $(src_pre_msvcrt60) \
   $(src_pre_msvcr70) \
+  $(src_pre_msvcr71) \
   $(src_pre_msvcr80) \
   $(src_pre_msvcr100) \
   $(src_pre_msvcr120) \
@@ -779,6 +782,7 @@ src_msvcrt10=\
   $(src_pre_msvcrt40) \
   $(src_pre_msvcrt60) \
   $(src_pre_msvcr70) \
+  $(src_pre_msvcr71) \
   $(src_pre_msvcr80) \
   $(src_pre_msvcr100) \
   $(src_pre_msvcr120) \
@@ -789,6 +793,7 @@ src_msvcrt20=\
   $(src_pre_msvcrt40) \
   $(src_pre_msvcrt60) \
   $(src_pre_msvcr70) \
+  $(src_pre_msvcr71) \
   $(src_pre_msvcr80) \
   $(src_pre_msvcr100) \
   $(src_pre_msvcr120) \
@@ -798,17 +803,20 @@ src_msvcrt20=\
 src_msvcrt40=\
   $(src_pre_msvcrt60) \
   $(src_pre_msvcr70) \
+  $(src_pre_msvcr71) \
   $(src_pre_msvcr80) \
   $(src_pre_msvcr100) \
   $(src_pre_msvcr120)
 
 src_msvcrtd=\
   $(src_pre_msvcr70) \
+  $(src_pre_msvcr71) \
   $(src_pre_msvcr80) \
   $(src_pre_msvcr100) \
   $(src_pre_msvcr120)
 
 src_msvcr70=\
+  $(src_pre_msvcr71) \
   $(src_pre_msvcr80) \
   $(src_pre_msvcr100) \
   $(src_pre_msvcr120) \
