--- a/mingw-w64-crt/lib64/msvcr120.def.in
+++ b/mingw-w64-crt/lib64/msvcr120.def.in
@@ -2231,7 +2231,7 @@ wcsstr
 wcstod
 wcstof
 wcstoimax
-wcstok
+_wcstok == wcstok ; provide nonstandard function "wcstok" in the DLL, under the name "_wcstok" to match UCRT, the C95+ compatible "wcstok" is provided by wcstok_s alias
 wcstok_s
 wcstol
 ; wcstold ; Can't use long double functions from the CRT on x86
@@ -2254,4 +2254,5 @@ wprintf_s
 wscanf
 wscanf_s
 
+#define USE_WCSTOK_S_FOR_WCSTOK
 #include "crt-aliases.def.in"
