--- a/mingw-w64-crt/lib64/msvcr90.def.in
+++ b/mingw-w64-crt/lib64/msvcr90.def.in
@@ -1465,7 +1465,7 @@ wcsrtombs_s
 wcsspn
 wcsstr
 wcstod
-wcstok
+_wcstok == wcstok ; provide nonstandard function "wcstok" in the DLL, under the name "_wcstok" to match UCRT, the C95+ compatible "wcstok" is provided by wcstok_s alias
 wcstok_s
 wcstol
 wcstombs
@@ -1486,4 +1486,5 @@ wscanf_s
 #define WITH_LLABS_ALIAS
 #define WITH_STRTO64_ALIAS
 #define WITH_STRTO64_L_ALIAS
+#define USE_WCSTOK_S_FOR_WCSTOK
 #include "crt-aliases.def.in"
